<resources>
    <string name="app_name">media3</string>
    <string name="trim_video">Trim video</string>
    <string name="slider">slider</string>
    <string name="music_is_selected">music is selected</string>
    <string name="split_range">split range</string>
    <string name="set_split_point">Set split point</string>
    <string name="add_video">Add video</string>
    <string name="start_splitting">Start Splitting</string>
    <string name="output_2">Output 2</string>
    <string name="output_1">Output 1</string>
    <string name="input">input</string>
    <string name="start_transformation">Start Transformation</string>
    <string name="grayscale">GrayScale</string>
    <string name="add_effect">Add Effect</string>
    <string name="output_video">Output video</string>
    <string name="input_video">Input Video</string>
    <string name="sepia_effect">Sepia Effect</string>
    <string name="adjust_hsl">Adjust HSL</string>
    <string name="inverted">Inverted</string>
    <string name="_3d_spin_at_start">3D spin at Start</string>
    <string name="enter_no_of_seconds">Enter no. of seconds</string>
    <string name="add_image">Add Image</string>
    <string name="create_video">Create Video</string>
    <string name="input_image">Input image</string>
    <string name="record_voice_over">Record Voice-over</string>
    <string name="voice_over">Voice Over</string>
    <string name="start_recording">Start Recording</string>
    <string name="merge_videos">Merge videos</string>
    <string name="adjust_volume">Adjust Volume</string>
    <string name="music_merge">Music merge</string>
    <string name="merge_text">Merge Text</string>
    <string name="split_video">Split Video</string>
    <string name="add_effects">Add Effects</string>
    <string name="image_to_video">Image to video</string>
    <string name="back">back</string>
    <string name="Continue">Continue</string>
    <string name="delete">delete</string>
    <string name="add_text">add Text</string>
    <string name="effects">effects</string>
    <string name="music">Music</string>
    <string name="split">split</string>
    <string name="play">play</string>
    <string name="redo">redo</string>
    <string name="undo">undo</string>
    <string name="top_left">Top left</string>
    <string name="bc">BC</string>
    <string name="br">BR</string>
    <string name="bl">BL</string>
    <string name="cr">CR</string>
    <string name="c">C</string>
    <string name="cl">CL</string>
    <string name="tr">TR</string>
    <string name="tc">TC</string>
    <string name="tl">TL</string>
    <string name="select_position">Select position</string>
    <string name="restart_video">Restart video</string>
    <string name="custombtn">customBtn</string>
</resources>