<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NavigateActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/trimAudioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_layout"
            android:text="@string/trim_video"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/mergeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/merge_videos"
            android:background="@drawable/button_layout"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trimAudioBtn" />

        <Button
            android:id="@+id/adjustVolumeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_layout"
            android:text="@string/adjust_volume"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mergeBtn" />

        <Button
            android:id="@+id/mergeMusicBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_layout"
            android:layout_marginTop="10dp"
            android:text="@string/music_merge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adjustVolumeBtn" />

        <Button
            android:id="@+id/addTextBtn"
            android:layout_width="match_parent"
            android:background="@drawable/button_layout"
            android:layout_height="wrap_content"
            android:text="@string/merge_text"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mergeMusicBtn" />


        <Button
            android:id="@+id/splitVideoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/split_video"
            android:background="@drawable/button_layout"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/voiceOverBtn" />


        <Button
            android:id="@+id/effectsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_layout"
            android:text="@string/add_effects"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addTextBtn" />

        <Button
            android:id="@+id/imageToVideoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_layout"
            android:text="@string/image_to_video"
            app:layout_constraintTop_toBottomOf="@+id/effectsBtn"
            tools:layout_editor_absoluteX="20dp" />


        <Button
            android:id="@+id/voiceOverBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_layout"
            android:text="@string/voice_over"
            app:layout_constraintTop_toBottomOf="@+id/imageToVideoBtn"/>


        <Button
            android:id="@+id/videoEditorBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_layout"
            android:text="Video Editor"
            app:layout_constraintTop_toBottomOf="@+id/splitVideoBtn"/>

        <Button
            android:id="@+id/augRealityBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_layout"
            android:text="AR experience"
            app:layout_constraintTop_toBottomOf="@+id/videoEditorBtn"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>