<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TextOverlayActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_video"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <androidx.media3.ui.PlayerView
            android:id="@+id/inputPlayerView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:resize_mode="fit"
            app:show_buffering="when_playing" />

        <TextView
            android:id="@+id/overlayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF5722"
            android:hint="Add Text"
            android:padding="10dp"
            android:visibility="gone"/>


    </FrameLayout>


    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="Add text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="output"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <androidx.media3.ui.PlayerView
        android:id="@+id/outputPlayerView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:resize_mode="fit"
        app:show_buffering="when_playing" />

    <Button
        android:id="@+id/addTextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start Merge Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/outputPlayerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/addVideoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_video"
        app:layout_constraintBottom_toTopOf="@+id/addTextBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_position"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/addVideoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outputPlayerView">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="#4B4747"
            app:cardCornerRadius="18dp"
            app:cardElevation="0dp">


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:singleSelection="true">


                <com.google.android.material.chip.Chip
                    android:id="@+id/topLeft"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:checkable="true"
                    android:text="@string/tl"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    app:checkedIcon="@drawable/ic_check"
                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/topCenter"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:checkable="true"
                    android:text="@string/tc"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    app:checkedIcon="@drawable/ic_check"
                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/topRight"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:checkable="true"
                    android:text="@string/tr"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    app:checkedIcon="@drawable/ic_check"
                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/centerLeft"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:checkable="true"
                    android:text="@string/cl"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    app:checkedIcon="@drawable/ic_check"
                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/center"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:checkable="true"
                    android:text="@string/c"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    app:checkedIcon="@drawable/ic_check"
                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/centerRight"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:checkable="true"
                    android:text="@string/cr"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    app:checkedIcon="@drawable/ic_check"
                    app:checkedIconEnabled="true" />


                <com.google.android.material.chip.Chip
                    android:id="@+id/bottomLeft"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:checkable="true"
                    android:text="@string/bl"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    app:checkedIcon="@drawable/ic_check"
                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/bottomCenter"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:checkable="true"
                    android:text="@string/bc"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    app:checkedIcon="@drawable/ic_check"
                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/bottomRight"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:checkable="true"
                    android:text="@string/br"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    app:checkedIcon="@drawable/ic_check"
                    app:checkedIconEnabled="true" />

            </com.google.android.material.chip.ChipGroup>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>